--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <div align="center">
     <h1 style="color: white;">"Oh hi! Welcome to my website."</h1>
-    <img align= "middle" src="kits.svg">
+    <img align= "middle" src="k-logo.b25b3988.svg">
     <br>
     <a id="large_link" href="https://kits.io/">Kits IO</a>
     <a id="large_link" href="https://kits.ai/">Kits AI</a>
