--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <div align="center">
-    <h1 style="color: white;">"Oh hi! Welcome to my website."</h1>
+    <h1 style="color: white;">"Welcome to Kits. Click 2 links to go any Kits which is old or new."</h1>
     <img align= "middle" src="k-logo.b25b3988.svg">
     <br>
     <a id="large_link" href="https://kits.io/">Kits IO</a>
